--- a/server/Makefile
+++ b/server/Makefile
@@ -1,19 +1,14 @@
 INC = ../include
 CFLAGS = -fPIC -c  -g
-LDFLAGS = -L../libsrc -lmenuS  -lhash -linput -larray -lpthread -ldl
+LDFLAGS = -L../libsrc -lmenuS  -lhash -linput -lload -larray -lpthread -ldl
 #LDFLAGS = -L../../lib -lmenu -lprofile -lhash -lio  -lpthread
-OBJS = join.o login.o 
-TARGET = libjoin.so liblogin.so
+OBJS = join.o login.o board.o #load.o 혹시안되면 여기에 넣어
+TARGET = libjoin.so liblogin.so libboard.so libwriteboard.so
 
-all: userServer $(TARGET) test
+all: userServer $(TARGET)
 
-test : test.o load.o join.o login.o 
-	$(CC) -o $@ $@.o load.o join.o login.o  $(LDFLAGS)
-	#cp $@ ../../bin/
-test.o : test.c
-	$(CC) -c -I$(INC) -g $<	
-userServer: userServer.o load.o
-	$(CC) -o $@ $@.o load.o $(LDFLAGS)
+userServer: userServer.o #load.o
+	$(CC) -o $@ $@.o $(LDFLAGS)
 	#cp $@ ../../bin/
 
 userServer.o: userServer.c
@@ -23,10 +18,16 @@ libjoin.so: join.o
 	$(LD) -shared -o $@ $<
 #	cp lib$@.so ../../bin/
 
-liblogin.so: login.o 
-	$(LD) -shared -o $@ $<
+liblogin.so: login.o
+	$(LD) -shared -o $@  login.o
 #	cp lib$@.so ../../bin/
 
+libboard.so: board.o 
+	$(LD) -shared -o $@ $<
+#	cp lib$@.so ../../bin/
+libwriteboard.so: writeboard.o 
+	$(LD) -shared -o $@ $<
+#	cp lib$@.so ../../bin/
 .c.o:
 	$(CC) $(CFLAGS) -I$(INC) $< 
 
