--- a/libsrc/Makefile
+++ b/libsrc/Makefile
@@ -1,7 +1,7 @@
 INC = ../include
 CFLAGS = -fPIC -c  -g
 OBJS1 = menu.o profile.o input.o
-TARGET = libmenuS.so libhash.so libarray.so libinput.so libload.so
+TARGET = libmenuS.so libhash.so libarray.so libinput.so libload.so libuseful.so
 
 all: $(TARGET)
 
@@ -20,6 +20,9 @@ libinput.so: input.o
 	$(LD) -shared -o $@ $<
 	
 libload.so: load.o 
+	$(LD) -shared -o $@ $<
+
+libuseful.so: useful.o 
 	$(LD) -shared -o $@ $<
 .c.o:
 	$(CC) $(CFLAGS) -I$(INC) $< 
