--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 INC = ../include
-CFLAGS = -fPIC -c  -g
-LDFLAGS = -L../libsrc -lmenuS  -lhash -linput -lload -luseful -larray -lpthread -ldl
+CFLAGS = -fPIC -c 
+LDFLAGS = -L../libsrc -lmenuS  -lhash -linput -lload -larray -lpthread -ldl
 #LDFLAGS = -L../../lib -lmenu -lprofile -lhash -lio  -lpthread
 OBJS = join.o login.o board.o #load.o 혹시안되면 여기에 넣어
 TARGET = libjoin.so liblogin.so libboard.so libwriteboard.so libreadboard.so libfindboard.so libchatting.so libdataboard.so libdownload.so libupload.so libfinddata.so libdeletedata.so
@@ -12,7 +12,7 @@ userServer: userServer.o #load.o
 	#cp $@ ../../bin/
 
 userServer.o: userServer.c
-	$(CC) -c -I$(INC) -g $<
+	$(CC) -c -I$(INC) $<
 
 libjoin.so: join.o 
 	$(LD) -shared -o $@ $<
